Add a status line for connected joysticks. Now uses badlogicgames packaging of Jamepad.